# pysisyphus-addons

./: .gitignore  README.md  flake.nix  meson.build  meson.options  pyproject.toml
nix/: overlay.nix  pysisyphus-addons.nix
pysisyphus_addons/: meson.build
pysisyphus_addons/common/: constants.f90  erfinv.f90  helpers.f90  linalg.f90  math.f90  meson.build  normalization.f90  screening.f90  shells.f90  timing.f90
pysisyphus_addons/common/integrals/: boys.f90  boys_data.f90  init.f90  intor.f90  meson.build
pysisyphus_addons/diabatization/: _intor.pyx  diabatization.f90  diabatization.py  diabatization_wrapper.f90  intor.f90  intor.py  intor.pyx  intor_wrapper.f90  meson.build
pysisyphus_addons/gdma/: gdma_int.py  meson.build  prim_dens.f90  prim_dens.pyx
pysisyphus_addons/grid/: _grid.pyx  grid.f90  grid.py  grid_wrapper.f90  meson.build
pysisyphus_addons/integrals/: boys.f90  init.f90  intor.f90  meson.build
pysisyphus_addons/intor/: _benchmark.pyx  _intor.pyx  benchmark.f90  benchmark.py  benchmark_wrapper.f90  intor.py  intor_wrapper.f90  meson.build
pysisyphus_addons/std/: _intor.pyx  intor.f90  intor.py  intor_wrapper.f90  meson.build
pysisyphus_addons/wavefunction/: gdma_int.py  meson.build  prim_dens.f90
tests/: conftest.py  meson.build
tests/test_coulomb_tensor/: bena2_dcat_densities_relaxed.npy  meson.build  test_coulomb_tensor.py
tests/test_grid/: test_grid.py
tests/test_intor/: test_schwarz_integrals.py
tests/test_std/: test_std.py
tests_fortran/: main.f90  meson.build  test_erfinv.f90  test_screening.f90
